backend-fastapi-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-fastapi-deploy
  labels:
    name: backend-fastapi-deploy
    app: unlimited-translation-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-fastapi-pod
      app: unlimited-translation-app
  template:
    metadata:
      name: backend-fastapi-pod
      labels:
        name: backend-fastapi-pod
        app: unlimited-translation-app
    spec:
      containers:
      - name: backend-fastapi
        image: datatrigger/unlimited-translation_backend_fastapi:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 3000m
            ephemeral-storage: 6Gi
            memory: 8Gi
          requests:
            cpu: 1000m
            ephemeral-storage: 4Gi
            memory: 6Gi
