mysql-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-stateful
  labels:
    name: mysql-stateful
    app: unlimited-translation-app
spec:
  template:
    metadata:
      labels:
        name: mysql-pod
        app: unlimited-translation-app
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: data-volume
        - mountPath: /docker-entrypoint-initdb.d
          name: mysql-initdb
      volumes:
      - name: mysql-initdb
        configMap:
          name: mysql-initdb-configmap
  replicas: 2
  selector:
    matchLabels:
      name: mysql-pod
      app: unlimited-translation-app
  serviceName: mysql-headless
volumeClaimTemplates:
- metadata:
    name: data-volume
  spec:
    accessModes:
      - ReadWriteOnce
    storageClassName: google-storage
    resources:
      requests:
        storage: 50Mi
