frontend-flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-flask-service
  labels:
    name: frontend-flask-service
    app: unlimited-translation-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30004
  selector:
    name: frontend-flask-pod
    app: unlimited-translation-app
