mysql-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
spec:
  ports:
  - port: 3306
  selector:
    name: mysql-pod
    app: unlimited-translation-app
  clusterIP: None
