unlimited-translation-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-fastapi-deploy
  labels:
    name: backend-fastapi-deploy
    app: unlimited-translation-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-fastapi-pod
      app: unlimited-translation-app
  template:
    metadata:
      name: backend-fastapi-pod
      labels:
        name: backend-fastapi-pod
        app: unlimited-translation-app
    spec:
      containers:
      - name: backend-fastapi
        image: datatrigger/unlimited-translation_backend_fastapi:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 3000m
            ephemeral-storage: 6Gi
            memory: 8Gi
          requests:
            cpu: 1000m
            ephemeral-storage: 4Gi
            memory: 6Gi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-fastapi-service
  labels:
    name: backend-fastapi-service
    app: unlimited-translation-app
spec:
  ports:
  - port: 80
    #targetPort: 80 same as port by default
  selector:
    name: backend-fastapi-pod
    app: unlimited-translation-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-flask-deploy
  labels:
    name: frontend-flask-deploy
    app: unlimited-translation-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend-flask-pod
      app: unlimited-translation-app
  template:
    metadata:
      name: frontend-flask-pod
      labels:
        name: frontend-flask-pod
        app: unlimited-translation-app
    spec:
      containers:
      - name: frontend-flask
        image: datatrigger/unlimited-translation_frontend_flask:k8s
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-flask-service
  labels:
    name: frontend-flask-service
    app: unlimited-translation-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
#    targetPort: 80
#    nodePort: 30004
  selector:
    name: frontend-flask-pod
    app: unlimited-translation-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-stateful
  labels:
    name: mysql-stateful
    app: unlimited-translation-app
spec:
  template:
    metadata:
      labels:
        name: mysql-pod
        app: unlimited-translation-app
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: data-volume
        - mountPath: /docker-entrypoint-initdb.d
          name: mysql-initdb
      volumes:
      - name: mysql-initdb
        configMap:
          name: mysql-initdb-configmap
  volumeClaimTemplates:
  - metadata:
      name: data-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 50Mi
  replicas: 2
  selector:
    matchLabels:
      name: mysql-pod
      app: unlimited-translation-app
  serviceName: mysql-headless
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  labels:
    name: mysql-headless
    app: unlimited-translation-app
spec:
  ports:
  - port: 3306
  selector:
    name: mysql-pod
    app: unlimited-translation-app
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  labels:
    name: mysql-read
    app: unlimited-translation-app
spec:
  type: LoadBalancer
  ports:
  - name: mysql
    port: 3306 # by default targetPort will be 3306 too
  selector:
    name: mysql-pod
    app: unlimited-translation-app
